2005-04-08  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Add __FreeBSD__ macro check for the wordaround
	announced as Free BSD specific by the comment next to it.
	
	* stlport/stl/_config.h: Add undef of _STLP_USE_DYNAMIC_LIB when in NO_IOSTREAMS
	mode, this macro was generating buggy code in this case for some commpilers
	(gcc mingwin).
	
2005-04-07  Francois Dumont  <dums@stlport...>

	* build/lib/nmake-vc-common.mak: Removed useless add of STLport/lib to 
	library paths when building STLport lib.
	
	* build/Makefiles/nmake/*: Removed useless specification of the MSVC default
	install	directory, all the job is done by the vcvcars32.bat script that sets
	the LIB env variable to the real MSVC install directory.
	
	* test/unit/unordered_test.cpp, locale_test.cpp: Removed gcc mingw warnings.
	
	* build/Makefiles/nmake/icl.mak, app/icl.mak, lib/icl.mak: Removed the
	whole program optimization option, looks like it is confusing icl.
	
	* stlport/stl/debug/*.h: Removed useless _Get_base non-const overload. 
	In addition to being useless Intel compiler emit compilation error about it.

2005-04-06  Petr Ovtchenkov  <ptr@island...>

	* test/unit/cppunit/test_main.cpp: windows.h required here
	[see 2005-04-04; patch by Michael Fink].

	* stlport/stl/_istream.h: __is replaced by __istr, due
	to MS privatize __is.

	* stlport/stl/_num_get.h: __in replaced by __ii, due to MS
	privatize __in too.

	* stlport/stl/_config.h: Visual C++ 8 uses _M_AMD64 to identify
	EM64T and AMD64 platforms [thanks Mike Roberts].

2005-04-05  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_evc.h: apply patch from Michael Fink to add support for
	various EVC SDK.
	
	* stlport/stl/_cmath.h: An other adaptation to the Intel C++ compiler.
	
	* build/lib/nmake-vc-common.mak, test/unit/nmake-vc-common.mak: Removed check
	of STLP_BUILD_FORCE_[STATIC,DYNAMIC]_RUNTIME environment variables,
	moved in a common build system file.
	