@@ -28,26 +28,17 @@
  * errno.h file would fail with a message like:
  * unable to find file ../include/(errno_macro_replacement).h
  */
-#  define _STLP_ERRNO_ALREADY_DEFINED
+#  define __save_errno errno
 #  undef errno
 # endif
 
 # include _STLP_NATIVE_C_HEADER(errno.h)
 
-# if defined (errno) || defined (_STLP_ERRNO_ALREADY_DEFINED)
-#  if !defined (_STLP_ERRNO_ALREADY_DEFINED)
-/* If errno was already defined it means that STLport errno.h
- * has already been included and __stlp_errno define. We do not 
- * redefine it as the errno macro might not have been redefine
- * in the case of a non reentrant native errno.h file (a common 
- * case).
- */
-inline int* __stlp_errno() {
-  return &(errno);
-}
+# if defined (errno)
+#  ifdef __save_errno
+#    define errno __save_errno
+#    undef __save_errno
 #  endif
-#  undef errno
-#  define errno (*__stlp_errno())
 # else
 _STLP_BEGIN_NAMESPACE
 using ::errno;
